<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="udacity.android.basics.com.musicalstructure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_player_padding"
            android:background="@android:color/white" />

        <TextView
            style="@style/main_label"
            android:text="@string/main_release_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/album1"
                style="@style/album_layout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/album_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_album_1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/album2"
                style="@style/album_layout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/album_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_album_2" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/main_label"
            android:text="@string/store_top_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/album3"
                style="@style/album_layout">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/album_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_album_1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/album4"
                style="@style/album_layout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/album_placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_album_2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/main_label"
                android:text="@string/store_gender_label" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/store_music1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/activity_store_list" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/store_music2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/activity_store_list" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/store_music3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/activity_store_list" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/store_music4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/activity_store_list" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>
